5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1644_2703.log
== TEST (2019-04-09 07:47:37) 
-- CODE:
# Leitura da idade do usuario:

num = int(input("Digite sua idade: "))

if (num % 2 => 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    if (num % 2 => 18):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 07:48:09) 
-- CODE:
# Leitura da idade do usuario:

num = int(input("Digite sua idade: "))

if (num => 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    if (num => 18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 07:48:29) 
-- CODE:
# Leitura da idade do usuario:

num = int(input("Digite sua idade: "))

if (num >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"

print(mensagem)

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 07:48:40) 
-- CODE:
# Leitura da idade do usuario:

num = int(input("Digite sua idade: "))

if (num >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.18833
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
